--- a/public/locales/ua/locale.json
+++ b/public/locales/ua/locale.json
@@ -4,8 +4,8 @@
     "en": "Англійська"
   },
   "links": {
-    "home": "Головна",
-    "news": "Новини"
+    "home": "До головної",
+    "news": "До новин"
   },
   "buttons": {
     "signIn": "Вхід",
