--- a/public/locales/ua/locale.json
+++ b/public/locales/ua/locale.json
@@ -15,7 +15,20 @@
     "signUp": "Реєстрація"
   },
   "home": {
-    "title": "Головна"
+    "title": "Головна",
+    "intro": {
+      "notification": {
+        "title": "Порада дня",
+        "text": "Збережи папір. Використовуй електронні засоби комунікації та переходь на електронні документи."
+      },
+      "h1": {
+        "firstPart": "Кожен день — новий",
+        "secondPart": "змінити світ."
+      },
+      "h2": "Стань його частиною.",
+      "plainText": "Хочеш змінити світ? Запитай поради у нашого AI-асистента.",
+      "buttonText": "Спробуй GreenGlobe AI"
+    }
   },
   "news": {
     "title": "Новини"
