[5]: intro-section responsive created, bugs fixed

--- a/public/locales/en/locale.json
+++ b/public/locales/en/locale.json
@@ -17,13 +17,15 @@
   "home": {
     "title": "Home",
     "intro": {
+      "imageAlt": "Image of the text chance",
       "notification": {
         "title": "Advice of the day",
         "text": "Save paper. Use electronic communication tools and switch to electronic documents."
       },
       "h1": {
         "firstPart": "Every day — a new",
-        "secondPart": "to change the world."
+        "secondPart": "to change the world.",
+        "full": "Every day — a new chance to change the world."
       },
       "h2": "Be a part of it.",
       "plainText": "Want to change the world? Ask for advice from our AI assistant.",
