--- a/public/locales/ua/locale.json
+++ b/public/locales/ua/locale.json
@@ -17,13 +17,15 @@
   "home": {
     "title": "Головна",
     "intro": {
+      "imageAlt": "Зображення тексту шанс",
       "notification": {
         "title": "Порада дня",
         "text": "Збережи папір. Використовуй електронні засоби комунікації та переходь на електронні документи."
       },
       "h1": {
         "firstPart": "Кожен день — новий",
-        "secondPart": "змінити світ."
+        "secondPart": "змінити світ.",
+        "full": "Кожен день — новий шанс змінити світ."
       },
       "h2": "Стань його частиною.",
       "plainText": "Хочеш змінити світ? Запитай поради у нашого AI-асистента.",
