task/15-news-section: news api fetch implemented

--- a/public/locales/en/locale.json
+++ b/public/locales/en/locale.json
@@ -37,6 +37,13 @@
       "first": "Welcome to GreenGlobe Hub, your ultimate destination for all things ecological. At GreenGlobe Hub, we are dedicated to providing a comprehensive platform that houses the latest eco news, insightful interviews with industry experts, thought-provoking articles, and practical eco-advice to empower individuals to make environmentally conscious choices. Whether you're passionate about sustainability, biodiversity, or combating climate change, GreenGlobe Hub offers a diverse range of content to keep you informed and inspired on your journey towards a greener future.",
       "second": "At the heart of GreenGlobe Hub lies our innovative GreenGlobeAI, a cutting-edge artificial intelligence designed to assist users with personalized eco-advice. Harnessing the power of AI technology, GreenGlobeAI offers tailored recommendations and solutions to help individuals adopt sustainable practices in their daily lives.",
       "imageAlt": "eco-image of about section"
+    },
+    "news": {
+      "title": "News",
+      "linkLabel": "Watch more",
+      "card": {
+        "buttonLabel": "Read more"
+      }
     }
   },
   "news": {
