feat: added initiatives

--- a/public/locales/en/locale.json
+++ b/public/locales/en/locale.json
@@ -7,7 +7,7 @@
     "home": "Home",
     "news": "News",
     "recycle": "Recycle",
-    "advices": "Advices",
+    "advices": "Initiatives",
     "blog": "Blog"
   },
   "buttons": {
