--- a/public/locales/ua/locale.json
+++ b/public/locales/ua/locale.json
@@ -7,7 +7,7 @@
     "home": "Головна",
     "news": "Новини",
     "recycle": "Переробка відходів",
-    "advices": "Поради",
+    "advices": "Ініціативи",
     "blog": "Блог"
   },
   "buttons": {
